[tool.poetry]
name = "eciespy"
packages = [
  {include = "ecies"},
]
version = "0.4.3"
# docs
authors = ["Weiliang Li <to.be.impressive@gmail.com>"]
description = "Elliptic Curve Integrated Encryption Scheme for secp256k1 in Python"
license = "MIT"
maintainers = ["Weiliang Li <to.be.impressive@gmail.com>"]
readme = "README.md"
repository = "https://github.com/ecies/py"
# tags
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "Natural Language :: English",
  "Programming Language :: Python :: Implementation :: CPython",
  "Operating System :: OS Independent",
  "Topic :: Security :: Cryptography",
]
keywords = [
  "secp256k1",
  "crypto",
  "elliptic curves",
  "ecies",
  "bitcoin",
  "ethereum",
  "cryptocurrency",
]
# package data
include = ["ecies/py.typed"]

[tool.poetry.dependencies]
python = "^3.8"

# 3rd party
coincurve = ">=13,<21"
eth-keys = ">=0.4,<0.7"
pycryptodome = "^3.19.1"

[tool.poetry.group.dev.dependencies]
ipython = {version = "^8.29.0", python = "^3.10"}
mypy = "^1.11.2"
ruff = ">=0.7.3,<0.9.0"

[tool.poetry.group.test.dependencies]
pytest = "^8.3.3"
pytest-cov = {version = "^6.0.0", python = "^3.9"}

[tool.poetry.scripts]
eciespy = "ecies.__main__:main"

[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core>=1.0.0"]

[tool.pytest.ini_options]
addopts = "--doctest-modules --cov=ecies"
